testsuite/tests/properties/invalid_call/property_with_args/test.lkt
from common import FooNode

class BarNode: FooNode {
    @property fun plus_one(i: Int): Int = i + 1

    @exported fun p(): Int = node.plus_one
}
